# stratasift

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: pytest.yml
stratasift/: __init__.py  cli.py  config.py
stratasift/core/: __init__.py  lifecycle.py  models.py  parser.py  sanitiser.py
stratasift/eval/: __init__.py  bootstrapper.py  metrics.py
stratasift/graph/: __init__.py  engine.py  nodes.py  state.py
stratasift/tools/: librarian.py  vector_store.py
stratasift/utils/: __init__.py  embeddings.py  file_io.py  ollamahealth.py  ui.py
tests/: test_graph.py  test_librarian.py  test_lifecycle.py  test_parser.py  test_sanitiser.py  test_vector_memory.py
tests/examples/: Active learning protocol for MLFFs using local energy uncertainty.md  Discovery of a 40% lower energy barrier for the rate-limiting step.md  Finite temperature free energy barrier calculations at 500K.md  MLFF vs DFT computational efficiency for reaction pathways.md  quarantine_case_broken.md  success_case_battery.md  variant_case_biomass.md
