[project]
name = "stratasift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.17.0",
    "click>=8.1.7",
    "google-generativeai>=0.8.6",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "rich>=13.6.0",
]

[project.scripts]
stratasift = "stratasift.cli:main"

[dependency-groups]
dev = [
    "deepeval>=4.0.7",
    "langchain>=0.3.0",
    "pytest>=9.1.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.20",
]

[tool.uv]
package = true
